--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-desktop (1:2.2.187) unstable; urgency=medium
+
+  * tasknav: support markup in thumbnail notes
+
+ -- Ivaylo Dimitrov <ivo.g.dimitrov.75@gmail.com>  Mon, 22 Aug 2022 09:54:22 +0300
+
 hildon-desktop (1:2.2.186) unstable; urgency=medium
 
   * Fix arguments to osso-xterm
