--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-desktop (1:2.2.188) unstable; urgency=medium
+
+  * tasknav: make sure correct anchor point is set depending on orientation
+
+ -- Ivaylo Dimitrov <ivo.g.dimitrov.75@gmail.com>  Mon, 22 Aug 2022 20:34:37 +0300
+
 hildon-desktop (1:2.2.187) unstable; urgency=medium
 
   * tasknav: support markup in thumbnail notes
