--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-desktop (1:2.2.193) unstable; urgency=medium
+
+  * hd-shortcuts: use XDG_PICTURES_DIR instead of MYDOCSDIR for screenshots
+
+ -- Ivaylo Dimitrov <ivo.g.dimitrov.75@gmail.com>  Tue, 28 May 2024 13:51:53 +0300
+
 hildon-desktop (1:2.2.192) unstable; urgency=medium
 
   * Fix menu sorting for the main menu and debian submenu
